<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_choice">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_playPokies"
        style="@style/Button.DefaultActiveStyle"
        android:text="@string/button_play_pokies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_playRoulette"
        android:layout_marginTop="8dp"
        style="@style/Button.DefaultActiveStyle"
        android:text="@string/button_play_roulette"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_playPokies" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dailyReward"
        android:layout_marginTop="8dp"
        android:text="@string/button_daily_reward"
        style="@style/Button.DefaultActiveStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_playRoulette" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_privacyPolicy"
        android:layout_marginTop="8dp"
        android:text="@string/button_privacy_policy"
        style="@style/Button.DefaultActiveStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dailyReward" />


</androidx.constraintlayout.widget.ConstraintLayout>